<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TagOperationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_id"
                android:textSize="@dimen/text_size_common" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_common">

            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_area"
                android:textSize="@dimen/text_size_common" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_access_pwd"
                android:textSize="@dimen/text_size_common" />

            <EditText
                android:id="@+id/et_access_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_access"
                android:inputType="number|numberDecimal"
                android:maxLength="8"
                android:textSize="@dimen/text_size_common" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_destroy_pwd"
                android:textSize="@dimen/text_size_common" />

            <EditText
                android:id="@+id/et_destroy_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_destroy"
                android:inputType="number|numberDecimal"
                android:maxLength="8"
                android:textSize="@dimen/text_size_common" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_offset"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_common"
                android:hint="@string/hint_unit"
                android:inputType="number|numberDecimal"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_length"
                android:textSize="@dimen/text_size_common" />

            <EditText
                android:id="@+id/et_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_unit"
                android:inputType="number|numberDecimal"
                android:textSize="@dimen/text_size_common" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_common">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_write_data"
            android:textSize="@dimen/text_size_common" />

        <EditText
            android:id="@+id/et_write_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_write_data"
            android:inputType="number|numberDecimal"
            android:textSize="@dimen/text_size_common" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_common"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_result_rw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_read" />

        <Button
            android:id="@+id/btn_write"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_write" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_set_access"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_set_access" />

        <Button
            android:id="@+id/btn_set_destroy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_set_destroy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_del_access"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_del_access" />

        <Button
            android:id="@+id/btn_del_destroy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_del_destroy" />

    </LinearLayout>

</LinearLayout>
