<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/main_bg"
    tools:context=".activity.WeekPlanMakeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_50"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <LinearLayout style="@style/plan_ll_styl"

                    >

                    <TextView
                        style="@style/plan_tv_styl"
                        android:text="@string/plan_name" />

                    <EditText
                        android:id="@+id/day_task_name"
                        style="@style/plan_et_styl"
                        android:background="@null"
                        android:hint="@string/hint_plan_name" />
                </LinearLayout>

                <View style="@style/line_styl" />

                <LinearLayout style="@style/plan_ll_styl">

                    <TextView
                        style="@style/plan_tv_styl"
                        android:text="@string/plan_type" />

                    <TextView
                        android:id="@+id/day_task_type"
                        style="@style/plan_et_styl"
                        android:hint="@string/hint_plan_type" />

                </LinearLayout>

                <View style="@style/line_styl" />

                <LinearLayout style="@style/plan_ll_styl">

                    <TextView
                        style="@style/plan_tv_styl"
                        android:text="执行班组" />

                    <TextView
                        android:id="@+id/day_task_class"
                        style="@style/plan_et_styl"
                        android:text="巡检一班" />
                </LinearLayout>

                <View style="@style/line_styl" />

                <LinearLayout style="@style/plan_ll_styl">

                    <TextView
                        style="@style/plan_tv_styl"
                        android:text="执行日期" />

                    <TextView
                        android:id="@+id/day_execute_date"
                        style="@style/plan_et_styl"
                        android:text="选择执行日期" />
                </LinearLayout>

                <View style="@style/line_styl" />

                <LinearLayout style="@style/plan_ll_styl">

                    <TextView
                        style="@style/plan_tv_styl"
                        android:text="周" />

                    <TextView
                        android:id="@+id/day_num"
                        style="@style/plan_et_styl"
                        android:text="请输入几月几周" />
                </LinearLayout>
                <View style="@style/line_styl" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    >

                    <TextView
                        android:layout_width="@dimen/dp_70"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_33"
                        android:textSize="@dimen/sp_14"
                        android:layout_marginLeft="31dp"
                        android:text="详情" />

                    <EditText
                        android:id="@+id/day_task_detail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_100"
                        android:layout_margin="@dimen/dp_10"
                        android:background="@drawable/day_white_bg"
                        android:gravity="left"
                        android:hint="请描述详情"
                        android:padding="@dimen/dp_10"
                        android:textSize="@dimen/sp_13" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day_task_line_ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/day_add_line"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:text="添加线路"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
        <TextView
            android:id="@+id/day_delet_line"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:background="@color/write_red"
            android:gravity="center"
            android:text="删除线路"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/day_yes"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="2"
            android:background="@color/gray_plan"
            android:gravity="center"
            android:text="发布任务"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
</RelativeLayout>